--- a/Reports/#47-2018.12.10.md
+++ b/Reports/#47-2018.12.10.md
@@ -5,9 +5,13 @@
 
 你也可以为这个项目出一份力，如果发现有价值的信息、文章、工具等可以到 [Issues](https://github.com/SwiftOldDriver/iOS-Weekly/issues) 里提给我们，我们会尽快处理。记得写上推荐的理由哦。有建议和意见也欢迎到 [Issues](https://github.com/SwiftOldDriver/iOS-Weekly/issues) 提出。
 
+
 ## 新闻
 
-新闻
+![Flutter 1.0 正式版: Google 的便携 UI 工具包](https://mp.weixin.qq.com/s/hCIN42OMmmc6HkOveegwWQ)
+
+万众瞩目的 Flutter 1.0 终于正式发布，从我们首次看到 Flutter 的 Beta 测试版，到如今的 1.0 正式版，总共经过了 9 个多月。Flutter 的高性能跨平台渲染与热重载等优秀的特性相信会让移动开发者们眼前一亮，在早先 beta 期就已经有很多公司与团队进行了这方面实践，现在 1.0 来了，作为移动开发者当然要感受一下
+ Flutter 的魅力。
 
 
 ## 文章
